# ChangeLog for dev-python/wxpython
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.153 2011/12/09 15:34:23 ssuominen Exp $

  09 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
  -files/scripts-multiver-2.6.1.0.diff, -wxpython-2.6.4.0-r2.ebuild:
  old

*wxpython-2.8.12.1 (09 Dec 2011)

  09 Dec 2011; Ryan Hill <dirtyepic@gentoo.org> +wxpython-2.8.12.1.ebuild:
  Version bump.

  09 Dec 2011; Ryan Hill <dirtyepic@gentoo.org> -wxpython-2.8.10.1.ebuild,
  -files/wxpython-2.8-drop-editra.patch:
  Remove old.

  16 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> wxpython-2.8.11.0.ebuild:
  ppc64 stable wrt #364203

  28 Jun 2011; Brent Baude <ranger@gentoo.org> wxpython-2.8.11.0.ebuild:
  Marking wxpython-2.8.11.0 ppc for bug 364203

  04 Jun 2011; Raúl Porcel <armin76@gentoo.org> wxpython-2.8.11.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #364203

  21 May 2011; Thomas Kahle <tomka@gentoo.org> wxpython-2.8.11.0.ebuild:
  x86 stable per bug 364203

  13 May 2011; Markus Meier <maekke@gentoo.org> wxpython-2.8.11.0.ebuild:
  arm stable, bug #364203

  27 Apr 2011; Christoph Mende <angelos@gentoo.org> wxpython-2.8.11.0.ebuild:
  Stable on amd64 wrt bug #364203

  26 Apr 2011; Jeroen Roovers <jer@gentoo.org> wxpython-2.8.11.0.ebuild:
  Stable for HPPA (bug #364203).

  22 Apr 2011; Ryan Hill <dirtyepic@gentoo.org> wxpython-2.8.11.0.ebuild,
  wxpython-2.8.12.0.ebuild:
  Don't install non-working binary stuff into DOCDIR (bug #364393 by ago).

*wxpython-2.8.12.0 (20 Apr 2011)

  20 Apr 2011; Ryan Hill <dirtyepic@gentoo.org> +wxpython-2.8.12.0.ebuild,
  +files/wxpython-2.8.12-drop-editra.patch:
  Version bump (bug #363319).

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> wxpython-2.6.4.0-r2.ebuild,
  wxpython-2.8.10.1.ebuild:
  Fixed slot deps

  27 Feb 2011; Ryan Hill <dirtyepic@gentoo.org> wxpython-2.8.10.1.ebuild,
  wxpython-2.8.11.0.ebuild, wxpython-2.9.1.1.ebuild: