@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/wxpython
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.153 2011/12/09 15:34:23 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.154 2012/01/06 21:25:12 hwoarang Exp $
+
+  06 Jan 2012; Markos Chandras <hwoarang@gentoo.org> wxpython-2.8.12.1.ebuild,
+  wxpython-2.9.1.1.ebuild:
+  Don't inherit unused eclass. Properly set local variables. Patch by Arfrever.
 
   09 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
   -files/scripts-multiver-2.6.1.0.diff, -wxpython-2.6.4.0-r2.ebuild:
